--- a/src/app/codelabs/extra/svg/svg.component.html
+++ b/src/app/codelabs/extra/svg/svg.component.html
@@ -23,19 +23,36 @@
     </div>
   </slides-slide>
 
+  <slides-slide no-padding *slidesIf="'kirjs'">
+    <div class="bg kirjs">
+      <h2>
+        <ul>
+          <li>Run meetups in NYC</li>
+          <li>Love 📖📖📖</li>
+          <li>@kirjs</li>
+        </ul>
+      </h2>
+    </div>
+  </slides-slide>
+
   <slides-slide *slidesIf="'why-svg'">
     <h1>What is SVG?</h1>
     <ul>
       <li>Scalable Vector Graphic Format</li>
       <li>Every object is just an XML tag</li>
-      <li>Also works with CSS</li>
+      <li>Works with CSS</li>
+      <li>Plays well with angular templates!</li>
     </ul>
+  </slides-slide>
+
+  <slides-slide *slidesIf="'angular-intro'">
+    <slides-svg-demo [fontSize]="fontSize" [code]=code.angular></slides-svg-demo>
   </slides-slide>
 
   <!--  INTRO -->
   <slides-slide no-padding *slidesIf="'svg-in-60'">
     <div class="bg svg-60">
-      <h2>SVG in 180 seconds</h2>
+      <h2>SVG in 5 minutes</h2>
     </div>
   </slides-slide>
 
@@ -58,6 +75,17 @@
   <slides-slide *slidesIf="'svg-text'">
     <slides-svg-demo [fontSize]="fontSize" [code]=code.text></slides-svg-demo>
   </slides-slide>
+
+
+  <slides-slide *slidesIf="'svg-linewrap'">
+    <slides-svg-demo [fontSize]="fontSize" [code]=code.linewrap></slides-svg-demo>
+  </slides-slide>
+
+
+  <slides-slide *slidesIf="'svg-foreign-object'">
+    <slides-svg-demo [fontSize]="fontSize" [code]=code.foreignObject></slides-svg-demo>
+  </slides-slide>
+
 
   <slides-slide *slidesIf="'svg-polygon'">
     <slides-svg-demo [fontSize]="fontSize" [code]=code.polygon></slides-svg-demo>
@@ -91,6 +119,7 @@
     <slides-svg-demo [fontSize]="fontSize" [code]=code.textPath></slides-svg-demo>
   </slides-slide>
 
+
   <slides-slide *slidesIf="'completed'">
     <h2>Now you're an SVG expert! </h2>
     <h2>However SVG has a couple of edge cases</h2>
@@ -101,85 +130,96 @@
       <h2>Sign up for my 80 hour workshop "Wait, SVG, LOL, Really?"</h2></div>
   </slides-slide>
 
-  <!--<slides-slide *slidesIf="'examples'" no-padding>-->
-  <!--<div class="bg example">-->
-  <!--<h2>Примеры?</h2>-->
-  <!--</div>-->
-  <!--</slides-slide>-->
+  <slides-slide *slidesIf="'examples'" no-padding>
+    <div class="bg example">
+      <h2>Let's check out some examples:</h2>
+    </div>
+  </slides-slide>
 
   <slides-slide *slidesIf="'angular'">
     <slides-svg-demo [fontSize]="fontSize" [code]=code.angular></slides-svg-demo>
   </slides-slide>
 
-  <!--<slides-slide *slidesIf="'examples-hc'">-->
-  <!--<h2><a href="https://www.highcharts.com/demo">Highcharts</a></h2>-->
-  <!--</slides-slide>-->
-
-
-  <!--<slides-slide *slidesIf="'svg-component1'" no-padding>-->
-  <!--<h1>Привязка к атрибутам</h1>-->
-  <!--<slides-exercise [files]="code.component1">-->
-  <!--<div class="description"></div>-->
-  <!--<slides-new-editors [fontSize]="fontSize" class="editor">-->
-  <!--</slides-new-editors>-->
-  <!--<slides-angular-preview-runner class="description"></slides-angular-preview-runner>-->
-  <!--</slides-exercise>-->
-  <!--</slides-slide>-->
-
-  <!--<slides-slide *slidesIf="'attr-vs-prop'">-->
-  <!--<h1>А че так?</h1>-->
-  <!--<div style="height: 100%;">-->
-  <!--<slides-simple-editor fontSize="40" [lineNumbers]="false" [(ngModel)]="code.attrVsProp"></slides-simple-editor>-->
-  <!--</div>-->
-  <!--</slides-slide>-->
-
-  <!--<slides-slide *slidesIf="'svg-chart'" no-padding>-->
-  <!--<h1>Давайте запилим график</h1>-->
-  <!--<slides-exercise [files]="code.chart">-->
-  <!--<div class="description"></div>-->
-  <!--<slides-new-editors [fontSize]="fontSize" class="editor">-->
-  <!--</slides-new-editors>-->
-  <!--<slides-angular-preview-runner class="description"></slides-angular-preview-runner>-->
-  <!--</slides-exercise>-->
-  <!--</slides-slide>-->
-
-
-  <!--<slides-slide *slidesIf="'svg-chart2'" no-padding>-->
-  <!--<h1>кастомные SVG Элементы</h1>-->
-
-  <!--<slides-exercise [files]="code.chart2">-->
-  <!--<div class="description"></div>-->
-  <!--<slides-new-editors [fontSize]="fontSize" class="editor">-->
-  <!--</slides-new-editors>-->
-  <!--<slides-angular-preview-runner class="description"></slides-angular-preview-runner>-->
-  <!--</slides-exercise>-->
-  <!--</slides-slide>-->
-
-  <!--<slides-slide *slidesIf="'attr-vs-prop'">-->
-  <!--<h1>А че так?</h1>-->
-  <!--<div style="height: 100%;">-->
-  <!--<slides-simple-editor fontSize="40" [lineNumbers]="false" [(ngModel)]="code.createElement"></slides-simple-editor>-->
-  <!--</div>-->
-  <!--</slides-slide>-->
-
-  <!--<slides-slide *slidesIf="'links'">-->
-  <!--<h2>Ссылки</h2>-->
-  <!--<ul>-->
-  <!--<li><a href="https://www.youtube.com/watch?v=ADXX4fmWHbo">SVG Can do that? (eng)</a></li>-->
-  <!--<li><a href="https://swimlane.github.io/ngx-charts/bar-vertical">NGX Charts</a></li>-->
-  <!--<li><a href="https://codelab.fun/svg/0">https://codelab.fun/svg/0</a></li>-->
-  <!--</ul>-->
-
-
-  <!--</slides-slide>-->
-
-  <slides-slide *slidesIf="'draw'">
-    <slides-svg-together [fontSize]="fontSize"></slides-svg-together>
+  <slides-slide *slidesIf="'examples-hc'">
+    <h2><a href="https://www.highcharts.com/demo">Highcharts</a></h2>
   </slides-slide>
 
-  <slides-slide *slidesIf="'svg-together-result'" no-padding="">
-    <slides-svg-together-result [fontSize]="fontSize"></slides-svg-together-result>
+
+  <slides-slide *slidesIf="'svg-component1'" no-padding>
+    <h1>SVG attributes binding</h1>
+    <slides-exercise [files]="code.component1">
+      <div class="description"></div>
+      <slides-new-editors [fontSize]="fontSize" class="editor">
+      </slides-new-editors>
+      <slides-angular-preview-runner class="description"></slides-angular-preview-runner>
+    </slides-exercise>
   </slides-slide>
+
+  <slides-slide *slidesIf="'attr-vs-prop'">
+    <h1>LOL, but why?</h1>
+    <div style="height: 100%;">
+      <slides-simple-editor fontSize="40" [lineNumbers]="false" [(ngModel)]="code.attrVsProp"></slides-simple-editor>
+    </div>
+  </slides-slide>
+
+  <slides-slide *slidesIf="'svg-chart'" no-padding>
+    <h1>Let's create a simple barchart</h1>
+    <slides-exercise [files]="code.chart">
+      <div class="description"></div>
+      <slides-new-editors [fontSize]="fontSize" class="editor">
+      </slides-new-editors>
+      <slides-angular-preview-runner class="description"></slides-angular-preview-runner>
+    </slides-exercise>
+  </slides-slide>
+
+
+  <slides-slide *slidesIf="'svg-chart2'" no-padding>
+    <h1>Custom SVG Elements</h1>
+
+    <slides-exercise [files]="code.chart2">
+      <div class="description"></div>
+      <slides-new-editors [fontSize]="fontSize" class="editor">
+      </slides-new-editors>
+      <slides-angular-preview-runner class="description"></slides-angular-preview-runner>
+    </slides-exercise>
+  </slides-slide>
+
+  <!--<slides-slide *slidesIf="'svg-chart3'" no-padding>-->
+    <!--<h1>Foreign object</h1>-->
+
+    <!--<slides-exercise [files]="code.chart3">-->
+      <!--<div class="description"></div>-->
+      <!--<slides-new-editors [fontSize]="fontSize" class="editor">-->
+      <!--</slides-new-editors>-->
+      <!--<slides-angular-preview-runner class="description"></slides-angular-preview-runner>-->
+    <!--</slides-exercise>-->
+  <!--</slides-slide>-->
+
+  <slides-slide *slidesIf="'attr-vs-prop'">
+    <h1>But why?</h1>
+    <div style="height: 100%;">
+      <slides-simple-editor fontSize="40" [lineNumbers]="false" [(ngModel)]="code.createElement"></slides-simple-editor>
+    </div>
+  </slides-slide>
+
+  <slides-slide *slidesIf="'links'">
+    <h2>Links</h2>
+    <ul>
+      <li><a href="https://www.youtube.com/watch?v=ADXX4fmWHbo">SVG Can do that? (eng)</a></li>
+      <li><a href="https://swimlane.github.io/ngx-charts/bar-vertical">NGX Charts</a></li>
+      <li><a href="https://codelab.fun/svg/0">https://codelab.fun/svg/0</a></li>
+    </ul>
+
+
+  </slides-slide>
+
+  <!--<slides-slide *slidesIf="'draw'">-->
+  <!--<slides-svg-together [fontSize]="fontSize"></slides-svg-together>-->
+  <!--</slides-slide>-->
+
+  <!--<slides-slide *slidesIf="'svg-together-result'" no-padding="">-->
+  <!--<slides-svg-together-result [fontSize]="fontSize"></slides-svg-together-result>-->
+  <!--</slides-slide>-->
 
 
   <slides-slide *slidesIf="'links'" no-padding>
