Add binary presentation

--- a/src/app/codelabs/extra/ast/ast.component.html
+++ b/src/app/codelabs/extra/ast/ast.component.html
@@ -3,7 +3,7 @@
   slides-mode-routing
   slides-tracking>
 
-  <slides-ast-progress-bar [fontSize]="fontSize" (fontSizeChange)="updateFontSize($event)"></slides-ast-progress-bar>
+  <slides-new-progress-bar [fontSize]="fontSize" (fontSizeChange)="updateFontSize($event)"></slides-new-progress-bar>
   <slides-arrows></slides-arrows>
 
 
